/*
Copyright 2023 The olive Authors

This program is offered under a commercial and under the AGPL license.
For AGPL licensing, see below.

AGPL licensing:
This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto3";

package discoverypb;

option go_package = "github.com/olive-io/olive/apis/pb/discovery;discoverypb";

import "github.com/olive-io/olive/apis/pb/discovery/discovery.proto";

enum ActivityType {
  Task = 0;
  ServiceTask = 1;
  ScriptTask = 2;
  UserTask = 3;
  SendTask = 4;
  ReceiveTask = 5;
  ManualTask = 6;
  CallActivity = 7;
}

message Activity {
  // the type of activity node, etc ServiceTask, ScriptTask
  ActivityType type = 1;
  // the id of activity node
  string id = 2;
  // the name of activity node
  string name = 3;
  // the type of activity node, defines in activity TaskDefinition
  string taskType = 4;
  // the id of bpmn definitions
  string definitions = 5;
  // the version of bpmn definitions
  uint64 definitionsVersion = 6;
  // the id if bpmn process
  string process = 7;
}

// Consumer
message Consumer {
  ActivityType activity = 1;
  string action = 2;
  // the id of Consumer
  string id = 3;

  map<string, string> metadata = 11;
  discoverypb.Box request = 12;
  discoverypb.Box response = 13;
}

// the sets of http consumers
message Yard {
  string id = 1;
  string address = 2;
  map<string, string> metadata = 3;
  map<string, Consumer> consumers = 4;
}